plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    implementation project(':list')
    implementation project(':utilities')

    // TODO: 필요하면 여기 추가 (예: JDBC 등)
    implementation 'org.xerial:sqlite-jdbc:3.45.3.0'
    runtimeOnly 'org.slf4j:slf4j-simple:1.7.32'
}

javafx {
    // 이미 설치해 둔 JavaFX 25 SDK 버전에 맞춰서
    version = '25.0.1'
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing' ]
}

application {
    // ✅ 여기는 실제 메-인 클래스 이름으로 수정해야 합니다.
    // 예시) 'com.emr.gds.main.IttiaEMR' 또는 'com.emr.gds.App'
    mainClass = 'com.emr.gds.IttiaApp'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics', '--enable-native-access=ALL-UNNAMED']
}
